<resources>
    <string name="app_name">Glove Box</string>
    <string name="Tab1">History</string>
    <string name="Tab2">New Item</string>
    <string name="Tab3">In Progress</string>
    <string name="MoreDetails">Show All</string>
    <string name="LessDetails">Show Less</string>
    <string name="Date">Date</string>
    <string name="Miles">Miles</string>
    <string name="ServiceProvided">Service Provided</string>
    <string name="ChangeOilButton">Oil Change\nChange Oil and Filter</string>
    <string name="IgnitionButton">Ignition\nPlugs, Wires, Coils</string>
    <string name="TireRotationButton">Rotate Tires\nRoutine Mant.</string>
    <string name="OtherServiceButton">Other\nNot Listed</string>
    <string name="CoolantServiceButton">Coolant\nExchange AntiFreeze</string>
    <string name="ServiceTrans">Service Trans\nFluid and Filter</string>

    <string name="serviceTitleOther">New Other Service</string>

    <string name="repairImageButton">Add Repair\nImage</string>
    <string name="receiptImageButton">Add Receipt\nImage</string>
    <string name="mileageLabel">Vehicle Millage:</string>
    <string name="ServiceDescription">Note:</string>
    <string name="partNumbers">Part Numbers:</string>
    <string name="repairPictures">Repair Pictures:</string>
    <string name="notes">Additional Notes:</string>
    <string name="empty"></string>
    <string name="saveButton">save</string>
    <string name="completeButton">Complete</string>

    <string name="pictureDescriptionHint">Description</string>
    <string name="partNumberHint">PartNumber</string>
    <string name="serviceDescriptionHint">Additional Description</string>
    <string name="mileageHint">Odometer Mileage</string>
</resources>
