<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackGroundColor"
    >

    <Button
        android:id="@+id/CoolantServiceButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/CoolantServiceButton" />

    <Button
        android:id="@+id/otherServiceButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginLeft="218dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/OtherServiceButton" />

    <Button
        android:id="@+id/transServiceButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginLeft="218dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/ServiceTrans" />

    <Button
        android:id="@+id/oilChangeButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/ChangeOilButton" />

    <Button
        android:id="@+id/tireRotationButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/TireRotationButton" />

    <Button
        android:id="@+id/ignitionButton"
        android:layout_width="163dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="219dp"
        android:backgroundTint="@color/serviceButtonColor"
        android:textColor="@color/appBarText"
        android:text="@string/IgnitionButton" />

    <ImageView
        android:id="@+id/flashLight"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="450dp"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</RelativeLayout>