<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/historyCV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/fragmentBackGroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inProgressID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/ServiceProvided"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inProgressMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Miles"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inProgressDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:text="@string/Date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/inProgressHiddenText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="This is a test of the expandable card view that will be implemented after-->
<!--            class todayThis is a test of the expandable card view that will be implemented after-->
<!--            class todayThis is a test of the expandable card view that will be implemented after-->
<!--            class todayThis is a test of the expandable card view that will be implemented after-->
<!--            class today"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/inProgressMiles"-->
<!--            tools:layout_editor_absoluteX="0dp" />-->

<!--        <Button-->
<!--            android:id="@+id/inProgressComplete"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="36dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:backgroundTint="@color/fullTransColor"-->
<!--            android:shadowColor="#00FFFFFF"-->
<!--            android:text="@string/completeButton"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintEnd_toStartOf="@id/inProgressDate"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/inProgressHiddenText" />-->

<!--        <Button-->
<!--            android:id="@+id/inProgressSave"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="36dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:backgroundTint="@color/fullTransColor"-->
<!--            android:shadowColor="#00FFFFFF"-->
<!--            app:layout_constraintTop_toBottomOf="@id/inProgressHiddenText"-->
<!--            app:layout_constraintEnd_toEndOf="@id/inProgressID"-->
<!--            android:text="@string/saveButton"-->
<!--            />-->

        <TextView
            android:id="@+id/miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inProgressMiles" />

        <TextView
            android:id="@+id/serviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inProgressID" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            app:layout_constraintEnd_toEndOf="@id/inProgressDate"
            app:layout_constraintTop_toBottomOf="@id/inProgressDate" />


        <Button
            android:id="@+id/detailsButton"
            android:text="Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/serviceName"
            app:layout_constraintStart_toStartOf="@id/inProgressID"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>